--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>color</title>
+    <link rel='stylesheet' href='styles.css'>
+    <script src="https://kit.fontawesome.com/77f356bd14.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id='root'>should not show</div>
+    <div id='root'></div>
     <script src='bundle.js'></script>
   </body>
 </html>
